Improved: Fixing defects reported by FindBugs, package org.apache.ofbiz.accounting.thirdparty.worldpay. (OFBIZ-9548)
Thanks Kyra Pritzel-Hentley for reporting and providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1817926 13f79535-47bb-0310-9956-ffa450edef68